# scipub

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
examples/: 01_basic_line_plot.py  02_2d_field.py  03_training_curves.py  04_multi_panel.py  05_colormap_showcase.py  generate_all.py
src/scipub/: __init__.py  colormaps.py  journal.py  templates.py
